<resources>
    <string name="app_name">AiDD</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="child_name">Child Name</string>
    <string name="doctor_s_email">Doctor\'s Email</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title_activity_child_nav">ChildNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <string name="exercises">Exercises</string>
    <string name="videos">Videos</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_parent_nav">ParentNavActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="progress">Progress</string>
</resources>