<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_slideshow">

    <fragment
        android:id="@+id/nav_home"
        android:name="te.project.aidd.ui.exercises.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="te.project.aidd.ui.videos.VideoFragment"
        android:label="@string/videos"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="te.project.aidd.ui.about.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />

    <fragment
    android:id="@+id/nav_logout"
    android:name="te.project.aidd.ui.logout.LogoutFragment"
    android:label="@string/logout"
    tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="te.project.aidd.ui.progress.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_progress" />
</navigation>