<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ChildLoginActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#A7F2FF"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="CHILD LOGIN"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_cusername"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="130dp"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/user"
                android:hint="@string/name"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/edittext_cpassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="45dp"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/border"
                android:drawableLeft="@drawable/password"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:password="true" />

            <Button
                android:id="@+id/button_clogin"
                android:layout_width="142dp"
                android:layout_height="60dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round"
                android:fontFamily="serif"
                android:text="@string/login"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>